# pdfviewer

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypdfview.cpp  mypdfview.h
